src/test/ui/rust-2018/uniform-paths/block-scoped-shadow.stderr
error[E0659]: `Foo` is ambiguous (name vs any other name during import resolution)
  --> $DIR/block-scoped-shadow.rs:21:9
   |
LL |     use Foo::*;
   |         ^^^ ambiguous name
   |
note: `Foo` could refer to the enum defined here
  --> $DIR/block-scoped-shadow.rs:20:5
   |
LL |     enum Foo { A, B }
   |     ^^^^^^^^^^^^^^^^^
note: `Foo` could also refer to the enum defined here
  --> $DIR/block-scoped-shadow.rs:15:1
   |
LL | enum Foo {}
   | ^^^^^^^^^^^
   = help: use `self::Foo` to refer to the enum unambiguously

error[E0659]: `std` is ambiguous (name vs any other name during import resolution)
  --> $DIR/block-scoped-shadow.rs:28:9
   |
LL |     use std as foo;
   |         ^^^ ambiguous name
   |
note: `std` could refer to the enum defined here
  --> $DIR/block-scoped-shadow.rs:27:5
   |
LL |     enum std {}
   |     ^^^^^^^^^^^
note: `std` could also refer to the struct defined here
  --> $DIR/block-scoped-shadow.rs:17:1
   |
LL | struct std;
   | ^^^^^^^^^^^
   = help: use `self::std` to refer to the struct unambiguously

error[E0659]: `std` is ambiguous (name vs any other name during import resolution)
  --> $DIR/block-scoped-shadow.rs:28:9
   |
LL |     use std as foo;
   |         ^^^ ambiguous name
   |
note: `std` could refer to the function defined here
  --> $DIR/block-scoped-shadow.rs:26:5
   |
LL |     fn std() {}
   |     ^^^^^^^^^^^
note: `std` could also refer to the unit struct defined here
  --> $DIR/block-scoped-shadow.rs:17:1
   |
LL | struct std;
   | ^^^^^^^^^^^
   = help: use `self::std` to refer to the unit struct unambiguously

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0659`.
